--- a/css/styles.css
+++ b/css/styles.css
@@ -147,7 +147,7 @@
   }
 
   .nav-side-menu {
-    position: relative;
+    position: fixed;
     width: 100%;
     margin-bottom: 10px;
   height:inherit;
