--- a/css/index.css
+++ b/css/index.css
@@ -4,6 +4,36 @@
   text-decoration: none;
 }
 
+/*----------------------------------------PreLoader---------------------------------------------*/
+#loader{
+  position: fixed;
+  background: #333;
+  width: 100%;
+  height: 100vh;
+  z-index: 9999;
+  margin-top: -10px;
+}
+@media (max-width: 767px) {
+  #loader{
+    margin-top: -60px;
+  }
+}
+
+
+.indicator {
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%) scale(2);
+}
+
+svg path,
+svg rect{
+  fill: #FF69B4;
+}
+
+
+
 .tagline{
   position: fixed;
   z-index: 1000;
