--- a/css/index.css
+++ b/css/index.css
@@ -347,6 +347,10 @@
 }
 
 /*Products Categories*/
+.col-4{
+  padding: -10px 0 -10px;
+}
+
 .products h5{
   text-align: center;
   color: #555!important;
@@ -367,7 +371,6 @@
 
 .products_img img{
   max-width: 100%;
-  margin: 10px 0 10px;
   box-shadow: 0 0 5px 2px rgba(0,0,0,0.5);
 }
 
